Release ...
* nroff: A special terminal name, -Tlocale, has been introduced. With this
  option, UTF-8 output is generated if permitted by the current LC_CTYPE
  locale, and regular -Tlp output otherwise.
* [nt]roff: It is now possible to use ".de" with more than two-character
  name arguments, as in ".de longname", and to invoke such macros later
  with ".longname". No compatibility problems should results because
  [nt]roff previously produced no output at all when such definitions
  were encountered.
* [nt]roff: The static block list limit NBLIST has been removed, memory
  is now dynamically allocated as needed.
* -man: A defect in the supplied -man macro package caused headers and
  footers to be garbled when they were printed between parts of a tbl table
  that was split across pages.

Release 050813
* Initial release.